styles.css
@font-face {
  font-family: optima;
  src: url("fonts/Optima.ttc") format("truetype-collection");
}

@font-face {
  font-family: tiemposHeadline-black;
  src: url("fonts/TiemposHeadline-Black.otf") format("opentype");
}
@font-face {
  font-family: tiemposHeadline-black-italic;
  src: url("fonts/TiemposHeadline-BlackItalic.otf") format("opentype");
}

@font-face {
  font-family: tiemposHeadline-bold;
  src: url("fonts/TiemposHeadline-Bold.otf") format("opentype");
}

@font-face {
  font-family: tiemposHeadline-bold-italic;
  src: url("fonts/TiemposHeadline-BoldItalic.otf") format("opentype");
}
@font-face {
  font-family: tiemposHeadline-light;
  src: url("fonts/TiemposHeadline-Light.otf") format("opentype");
}
@font-face {
  font-family: tiemposHeadline-light-italic;
  src: url("fonts/TiemposHeadline-LightItalic.otf") format("opentype");
}
@font-face {
  font-family: tiemposHeadline-medium;
  src: url("fonts/TiemposHeadline-Medium.otf") format("opentype");
}
@font-face {
  font-family: tiemposHeadline-medium-italic;
  src: url("fonts/TiemposHeadline-MediumItalic.otf") format("opentype");
}

@font-face {
  font-family: tiemposHeadline-regular;
  src: url("fonts/TiemposHeadline-Regular.otf") format("opentype");
}
@font-face {
  font-family: tiemposHeadline-regular-italic;
  src: url("fonts/TiemposHeadline-RegularItalic.otf") format("opentype");
}
@font-face {
  font-family: tiemposHeadline-semi-bold;
  src: url("fonts/TiemposHeadline-Semibold.otf") format("opentype");
}
@font-face {
  font-family: tiemposHeadline-semi-bold-italic;
  src: url("fonts/TiemposHeadline-SemiboldItalic.otf") format("opentype");
}
@font-face {
  font-family: unicode-optima;
  src: url("fonts/unicode.optima.ttf") format("truetype");
}

* {
  --gold: #c1a06b;
  --white: #fff;
  --gray: #434542;
  --font-grey:#616161;
  --form-backdrop: #000302;
  --beige: #f9f7f0;
  --dark-gold:#cba554 ;
  --font-dark-gold:#755527;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "optima";
  font-size: 16px;
  scroll-margin-top: 100px ;
}
/* @media (max-wdith:768px) {
  *{
  scroll-margin-top:100px ;
  }
} */

h1 {
  font-size: 5.58rem; /* 67pt */
}

h2 {
  font-size: 3.2rem;
  text-transform: uppercase;
  font-family: "tiemposHeadline-light";
  font-weight: 400 ;
}

h3 {
  font-size: 1.5rem;
  font-weight: 500;
  font-family:"tiemposHeadline-light" ;
  color: var(--font-grey);
}
@media(max-width:768px){
  h2{
    font-size: 2.8rem;
  }
  h3{
  font-size: 1.2rem;
  }
}
p {
  font-family: optima;
  font-size: 1.33rem; /* 16pt */
}

button {
  font-family:tiemposHeadline-regular !important;
  font-size: 1.3rem !important; /* 20pt */
  font-weight: 500 !important;
  box-shadow: 36px 14px 56px -30px rgba(0,0,0,1),
  -5px 2px 37px 0px rgba(0,0,0,0.22) !important;
}
@media(max-width:768px){
  button {
     width: 92% ;
  }
}
.heading-h1 {
  font-size: 3.13rem; /* 37.5pt */
}

.text-gold {
  color: var(--gold);
}
body {
  position: relative;
  /* width: 100%; */
  overflow-x: hidden;
}

.screen-backdrop{
  display: none;
  position: absolute;
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.2); 
  z-index: 1000;
}

.pop-up-form{
  width: 30%;
  z-index: 1001;
  background-color: var(--beige);
  border: 2px solid var(--gold);
  /* border-radius: ; */
  display:none;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 24px;
 }
 #close-button{
  position: absolute;
  right: 14px;
  top: 14px;
 }
 .pop-up-form h2{
  font-size: 3rem;
 }
 .pop-up-form form button{
  background-color: red;
  width: 100%;
   margin: 0 auto;
 }
 @media (max-width:768px) {
  .pop-up-form{
    width: 84%;
  }
  .pop-up-form h2{
    font-size: 2rem;
   }
 }
.enquire-now {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--gold);
  
  position: fixed;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  z-index: 999;
  height: 170px;
  width: 35px;
  writing-mode: vertical-rl;
  text-align: center;
}

.enquire-now {
  color: #000;
  text-decoration: none;
 
  transform: rotate(180deg);
}
/* button{
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 20px;

} */
.btn-shadow{
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 20px;
}

/* nav bar */
.navbar-toggler{
  border: none;
  box-shadow: none !important;
}
.call-btn img{
   height: 16px;
}
.navbar-toggler:focus{
  border: none;
  outline: none !important;
  box-shadow: none !important;
}
@media (max-width: 768px) {
  .logo img {
    height: 36px;
    width: 100%;
  }
  .enquire-now {
    top: 60%;
  }
}

.banner-navigation {
  position: absolute;
  background-attachment: plum;
  z-index: 10;
  bottom: 15%;
  right: 5%;
  display: flex;
  justify-content: center;
  gap: 24px;
}
.banner-text h1:nth-of-type(1) {
  font-size: 3.13rem;
}
.banner-text h1:nth-of-type(2) {
  font-size: 5.58rem;
}
.banner form input::placeholder{
  color:gainsboro;
}
.banner h2{
  font-size:1.2rem;
}
.banner form  input{
  color: var(--white) !important;
}
@media (max-width: 768px) {
  .banner-text h1:nth-of-type(1) {
    font-size: 1.5rem;
  }
  .banner-text h1:nth-of-type(2) {
    font-size: 2.5rem;
  }
  .banner form {
    display: none;
  }
}


/* overview */
.overview p{
  width: 75%;
} 
.overview h2{
  margin-bottom: 0px
}
/* .overview h3{
  font-size: ;
} */
@media (max-width:768px) {
  .overview p{
    width: 100%;
  }
}
/* location */
.location h2{
  font-family: unicode-optima;
}
.location-points-wrapper{
  margin: 0 200px;
}
.location-points .image-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 9px;
  height: 100px;
  width: 100px;
}

.location-navigation {
  z-index: 10;
  position: absolute;
  right: 0%;
  display: flex;
  justify-content: center;
  gap: 14px;
}
/* ... */

